stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Get':
CircularBuffer.c:84:6: error: 'struct CircularBuffer' has no member named 'input_output'
   84 |  self->input_output=nextIndex(self,self->output_index);
      |      ^~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
